--- a/04_deploy_flask_app_to_kubernetes_using_EKS/buildspec.yml
+++ b/04_deploy_flask_app_to_kubernetes_using_EKS/buildspec.yml
@@ -20,6 +20,9 @@ phases:
       - export PATH=$PWD/:$PATH
       - python -m pip install --upgrade --force pip
       - apt-get update && apt-get -y install jq  && pip install --upgrade awscli
+      - pip install -r requirements.txt
+      - pytest test_main.py
+
   pre_build:
       commands:
         - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
@@ -38,3 +41,7 @@ phases:
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   files: build.json
+
+env:
+  parameter-store:
+    JWT_SECRET: JWT_SECRET
